syntax = "proto3";

package collector;

import "github.com/DataDog/datadog-trace-agent/model/span.proto";

service CollectorService {
    rpc SendTraces (SendTracesRequest) returns (SendTracesResponse);
}

message SendTracesRequest {
    repeated APITraceChunk chunks = 1;
}

message SendTracesResponse {
}

message APITraceChunk {
    repeated model.Span spans = 1;
    string hostname = 2;
    uint64 traceID = 3;
}
